--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Poppins:200,300,400,500,600,700');
+/* @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Poppins:200,300,400,500,600,700'); */
 
 /*Table of Content
 - body
@@ -38,7 +38,7 @@ body {
    color: #000;
    font-size: 14px;
    overflow-x: hidden;
-   font-family: 'Open Sans', sans-serif;
+   font-family: 'Roboto', sans-serif;
    direction: ltr;
 }
 
@@ -4593,7 +4593,15 @@ h2.logo {
    line-height: 1.5;
    font-size: 32px;
 }
-
+.lets__talk{
+   padding: 5rem 0;
+   overflow: hidden;
+}
+.lets__talk span{
+   font-size: clamp(5rem,11vw,12rem);
+   line-height: 1.25;
+   font-weight: 400;
+}
 /*@media (max-width: 1400px){
    .split-box .padding {
 	   padding: 5.5rem 0;
